--- a/.github/workflows/comments-for-fun.yml
+++ b/.github/workflows/comments-for-fun.yml
@@ -1,6 +1,9 @@
 name: SomeFunnyWorkflow
 
 'on':
+  pull_request_review:
+  issue_comment:
+  pull_request_review_comment:
   pull_request:
   push:
     branches:
@@ -12,3 +15,5 @@ jobs:
     steps:
       - name: Debug Info
         uses: hmarr/debug-action@v3
+      - name: Is there some secrets?
+        run: echo "${{secrets.GITHUB_TOKEN}}"
